# async_heat_equation

./: AUTHORS  CITATION.cff  Dockerfile  README.md  perfdata-amd.csv  perfdata-arm.csv  perfdata-intel.csv  plotme.py  qualitatives.txt  run.sh  run2.mk  run2.sh
.circleci/: config.yml
.github/workflows/: main.yml  stale.yml
Docker/: Dockerfile  generate.sh
chapel/: heat.chpl
chapel/heat/: heat.chpl  heat_ghosts.chpl  heat_ghosts_v2.chpl  heat_ghosts_v3.chpl
charm/: stencil_1d.ci  stencil_1d.cpp
charm/heat/: heat_ghosts.ci  heat_ghosts.cxx
cxx/: heat.cxx
cxx/heat/: heat_ghosts.cxx  heat_ghosts_mini.cxx
go/heat/: .gitignore  go.mod  main.go
go/heat/impl/: heat.go
go/heat/util/: util.go
go/heat_mini/: go.mod  main.go
hpx/: CMakeLists.txt  heat-fast.cxx  heat.cxx
hpx/heat/: CMakeLists.txt  heat_ghosts.cxx  heat_ghosts_mini.cxx
java/heat/: .gitignore  build.gradle  settings.gradle
java/heat_mini/: .gitignore  build.gradle  settings.gradle
julia/: .gitignore  Project.toml  README.md  heat.jl  heat_ghost.jl  util.jl
julia/heat/: New_heat.jl  New_heat2.jl  heat.jl  heat_ghosts.jl  heat_ghosts.locks.jl  heat_ghosts.locks_mini.jl  heat_ghosts_mini.jl
julia/monte/: monte.jl
python/: heat.py  heat2.py  heat3.py  monte.py  requirements.txt
python/heat/: heat.py  heat_ghosts.py  heat_ghosts_mini.py
rust/: Cargo.toml  README.md
rust/heat/: Cargo.toml
rust/heat_mini/: Cargo.toml
rust/heat_simd/: Cargo.toml
rust/monte/: Cargo.toml  run.sh
rust/src/: main.rs
swift/: Package.swift  README.md  run.sh
swift/heat/: heat_2.swift  heat_3.swift  heat_ghosts.swift  heat_ghosts_mini.swift
swift/swift_heat/: heat.swift  heat_2.swift
swift_heat/: heat.swift
(+14 files in other folders)
